Restructure Usage section in README and index.md
Clarify SystemInfo instantiation options with a selection table showing
which implementation is chosen based on classpath, JDK version, and
platform. Recommend SystemInfoFactory.create() for new code while
noting direct instantiation maintains backward compatibility.